--- a/assets/styles/sass/abstracts/_variables-sass.scss
+++ b/assets/styles/sass/abstracts/_variables-sass.scss
@@ -1,28 +1,29 @@
 // ----------------
-// Sass Config and variables
+// Config Sass et variables
 // ----------------
 
 // ----------------
-// Breakpoints values
+// Valeurs de Breakpoints
 // ----------------
+
+// Hypothèse : smartphone portrait/paysage < 576px < gros smartphone paysage + tablette portrait < 992px < tablette paysage < 1330px < laptop et plus
 $breakpoints: (
-  sm: 576px,
+  sm: 500px,
   md: 768px,
-  lg: 1024px,
-  xl: 1330px,
+  lg: 960px,
 ) !default;
 
 $small: map-get($breakpoints, sm) !default;
 $medium: map-get($breakpoints, md) !default;
 $large: map-get($breakpoints, lg) !default;
-$extra-large: map-get($breakpoints, xl) !default;
 
 // ----------------
-// Spacers values
+// Spacers
 // ----------------
 
 $spacers: (
   "0": 0,
+  // none
   "1": 0.5rem,
   // tiny
   "2": 0.75rem,
@@ -31,44 +32,72 @@ $spacers: (
   // small
   "4": 1.5rem,
   // small-plus
-  "5": 2rem,
+  "5": 2em,
   // medium
   "6": 3rem,
   // medium-plus
   "7": 5rem,
   // large
+  "8": 7rem,
+  // large-plus
+  "10": 10rem,
+  // extra-large
   "auto": auto,
 ) !default;
 
 $spacer-none: map-get($spacers, "0") !default;
-$spacer-tiny: map-get($spacers, "1") !default;
-$spacer-tiny-plus: map-get($spacers, "2") !default;
-$spacer-small: map-get($spacers, "3") !default;
-$spacer-small-plus: map-get($spacers, "4") !default;
-$spacer-medium: map-get($spacers, "5") !default;
-$spacer-medium-plus: map-get($spacers, "6") !default;
-$spacer-large: map-get($spacers, "7") !default;
+$spacer-tiny: map-get($spacers, "2") !default;
+$spacer-tiny-plus: map-get($spacers, "5") !default;
+$spacer-small: map-get($spacers, "8") !default;
+$spacer-small-plus: map-get($spacers, "10") !default;
+$spacer-medium: map-get($spacers, "16") !default;
+$spacer-medium-plus: map-get($spacers, "20") !default;
+$spacer-large: map-get($spacers, "24") !default;
+$spacer-large-plus: map-get($spacers, "36") !default;
 
 // ----------------
-// Grid layout values
+// Grid layout
 // ----------------
 
-$grid-columns: 6 !default;
+$grid-columns: 12 !default;
+
+$gaps: (
+  "0": 0,
+  "1": 0.5rem,
+  "2": 1rem,
+  "3": 2rem,
+  "4": 3rem,
+  "5": 4rem,
+) !default;
 
 // ----------------
-// Fonts values
+// Fonts
 // ----------------
 
 // Font families
-$font-family-base: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font-family-headings: sans-serif;
+$font-family-base: "Rosario", sans-serif;
+$font-family-headings: "Beleren", serif;
 $font-family-monospace: consolas, courier, monospace;
 $line-height-base: 1.5;
 
 // Font sizes
-$font-size-html: 62.5%;
-$font-size-base: 1.6rem;
+$font-size: (
+  "10": 0.625rem,
+  "11": 0.6875rem,
+  "12": 0.75rem,
+  "14": 0.875rem,
+  "16": 1rem,
+  "18": 1.125rem,
+  "20": 1.25rem,
+  "24": 1.5rem,
+  "30": 1.875rem,
+  "36": 2.25rem,
+  "base": 1rem,
+  "inherit": "inherit",
+);
+
+$font-size-html: 100%;
+$font-size-base: 1rem;
 
 // Font weights
 $weight-light: 200;
@@ -78,10 +107,10 @@ $weight-medium: 500;
 $weight-bold: 700;
 
 // ----------------
-// Color values
+// Couleurs
 // ----------------
 
-// Color palette (don't use as variables except $white and $black)
+// Palette de couleur (à ne pas utiliser en variables sauf $white and $black)
 $white: #ffffff;
 $black: #000000;
 
@@ -90,33 +119,20 @@ $color-gray-2: #abc3c2;
 $color-gray-3: #454d5d;
 $color-gray-4: #212529;
 
-$color-blue-1: #0275d8;
-$color-blue-2: #04527b;
-$color-blue-3: #033651;
+$vgh-sombre: #1f1919;
+$vgh-rouge: #810d0d;
 
-// Non agnostic colors (should be used as variables)
+// Palette non agnostic (à utiliser en variables)
 
-$color-alpha: $color-gray-1; // most used colors
+$color-alpha: $color-gray-1; // couleurs fréquentes
 $color-beta: $color-gray-3;
 $color-gamma: $color-gray-4;
-
-$color-delta: $color-blue-1;
-$color-epsilon: $color-blue-2;
 
 $color-gradient-alpha: linear-gradient(
   to left bottom,
   $color-alpha,
   $color-beta
 );
-
-$color-alternate-1: #5cb85c; // less used colors
-$color-alternate-1b: #4d9c4d;
-$color-alternate-2: #5bc0de;
-$color-alternate-2b: #4fa8c4;
-$color-alternate-3: #f0ad4e;
-$color-alternate-3b: #d19644;
-$color-alternate-4: #d9534f;
-$color-alternate-4b: #be4945;
 
 // Links
 $link-decoration: underline;
@@ -130,7 +146,7 @@ $radius-large: 2rem;
 $radius-circle: 50%;
 
 // ----------------
-// Utils properties list (note that display: grid is in Grillade)
+// Liste des propriétés utilitaires (note display: grid se trouve dans Grillade)
 // ----------------
 $utils: (
   (hidden, display, none),
