--- a/assets/styles/sass/base/_reset-base.scss
+++ b/assets/styles/sass/base/_reset-base.scss
@@ -34,7 +34,7 @@ body {
   font-size: $font-size-base;
   line-height: $line-height-base;
   background-color: $white;
-  color: $color-gamma;
+  color: $white;
 }
 
 /*
@@ -53,7 +53,7 @@ h5,
 .h5-like,
 h6,
 .h6-like {
-  color: $color-gamma;
+  color: $white;
 }
 
 /*
@@ -61,7 +61,7 @@ h6,
  */
 
 a {
-  color: $color-beta;
+  color: $white;
   text-decoration: $link-decoration;
 }
 
