--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
 
             <!-- Renders a link tag (if your module requires any CSS)
                  <link rel="stylesheet" href="/build/app.css"> -->
+                 
         {% endblock %}
 
         {% block javascripts %}
@@ -20,8 +21,8 @@
     <body>
     <header><h1>Menu Principal</h1></header>
 
-    <main>
-    <section>
+    <main class="grid grid-cols-12 my-6 gap-5">
+    <section class="col-start-1 col-span-8 py-4 ">
         {% block body %}
       
 
@@ -31,7 +32,9 @@
         {% endblock %}
         </section>
         
-       <aside><h3>Sidebar</h3></aside>
+       
+       <aside class=" col-start-9 col-span-4">{% block aside %}<h3> Sidebar</h3> {% endblock %}</aside>
+      
 </main>
         <footer><h1>Footer</h1></footer>
     </body>
