--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -10,5 +10,23 @@
     <p>
       Note du jeu :
       {{article.note}}</p>
+
+    <h1>Les Commentaires</h1>
+
+    {% for comment in article.comments %}
+
+      <div class="commentaire-solo">
+        <h3>{{comment.author}}</h3>
+        {{comment.content}}
+      </div>
+    {% endfor %}
+
+    <div class="comment-form">
+      {{form_start(commentForm)}}
+      {{form_row(commentForm.author)}}
+      {{form_row(commentForm.content)}}
+      <button type="submit" class="btn btn--primary">Envoyer le commentaire</button>
+      {{form_end(commentForm)}}
+    </div>
   {% endblock %}
 {% endblock %}
