--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
   {% block content %}
-    <h2 class="mt-3 text-center">Ceci est la page d'accueil</h2>
+    <h2 class="mt-3 text-center">{% trans %}This is the homepage{% endtrans %}</h2>
 
     <p>
       Voici des articles :
