--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,8 @@
 
   <body>
     <header>
-      <h1>Menu Principal</h1>
+      <h1>Videogamehorses</h1>
+      <p>{% trans %}in english{% endtrans %}</p>
     </header>
 
     <main class="grid grid-cols-12 my-6 gap-5">
