--- a/assets/styles/sass/knacss.scss
+++ b/assets/styles/sass/knacss.scss
@@ -35,4 +35,6 @@
 
 @import "include/accueil";
 @import "include/layout";
+@import "include/card";
+@import "include/button";
 @import "fonts/fonts";
