--- a/assets/styles/sass/include/_layout.scss
+++ b/assets/styles/sass/include/_layout.scss
@@ -15,25 +15,43 @@ body {
 
 header {
   width: auto;
-  height: 150px;
+  height: 250px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: url("./include/images/got.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 85%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: flex-start;
+  position: relative;
+
+  //box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  a {
+    text-decoration: none;
+    z-index: 5;
+    margin-left: 3rem;
+    font-size: 48px;
+    -webkit-text-stroke: 1px black;
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("./include/images/got.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 30% 82%;
+    filter: grayscale(30%);
+  }
 }
 
 footer {
   width: auto;
-  height: 150px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: auto;
-  background: rgba(129, 13, 13, 0.7);
+  background: $color-gray-3;
 }
 
 main {
@@ -45,14 +63,15 @@ aside {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 70vh;
+  max-height: 800px;
   background: rgba(129, 13, 13, 0.7);
 }
 section {
-  border: 5px solid white;
+  //border: 5px solid white;
   /*  display: flex;
   align-items: center; 
   justify-content: center;*/
+  background-color: #333333;
 }
 
 h1,
@@ -75,4 +94,58 @@ form #form > div {
 
 form #form label {
   margin-right: 2rem;
+}
+
+$vgh-red: #631111;
+$vgh-dark: #1f1919;
+
+//Sidebar
+
+.language-menu img {
+  height: 30px;
+  width: 30px;
+}
+
+.reseaux-sociaux {
+  display: flex;
+  justify-content: center;
+
+  i {
+    font-size: 42px;
+    margin: 1rem;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 50%;
+  }
+  .fa-linkedin {
+    color: #2867b2;
+  }
+  .fa-github {
+    color: #24292f;
+  }
+}
+
+.main-nav {
+  background-color: $vgh-red;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  ul {
+    margin-left: 0;
+    padding-left: 0;
+    list-style: none;
+  }
+  li {
+    list-style: none;
+  }
+  a {
+    font-size: 36px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+}
+
+.sidebar h3 {
+  background-color: white;
+  color: $vgh-dark;
+  padding: 0.5rem 1.5rem;
+  margin-top: 1rem;
 }
