--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -4,9 +4,7 @@
   {% block content %}
     <h1>{{article.titre}}</h1>
     {{dump(article)}}
-    <img src="{{article.thumbnail}}" alt="">
-    <img src="{{ vich_uploader_asset(article, 'thumbnailFile') }}" alt="{{ article.titre }}">
-    <img src="/uploads/files/{{article.thumbnail}}" alt="">
+    <img src="/uploads/files/{{article.thumbnail}}" alt="{{article.titre}}">
     <p>{{article.introduction}}</p>
     {{article.contenu|raw}}
 
