--- a/assets/styles/sass/knacss.scss
+++ b/assets/styles/sass/knacss.scss
@@ -37,4 +37,7 @@
 @import "include/layout";
 @import "include/card";
 @import "include/button";
+@import "include/article";
+@import "include/sidebar";
+@import "include/form";
 @import "fonts/fonts";
