--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,21 +23,22 @@
         <h1>Videogamehorses</h1>
       </a>
     </header>
-    <nav class=" main-nav">
-      <ul class="flex justify-center ">
+    <nav class=" main-nav flex ">
+      <ul class="flex lg:flex-row flex-col justify-center align-items-center ">
+        <li class="mx-6">
+          <a href="/">{% trans %}Home{% endtrans %}</a>
+        </li>
         <li class="mx-6">
           <a href="/article/list">{% trans %}Reviews{% endtrans %}</a>
         </li>
-        <li class="mx-6">
-          <a href="">{% trans %}News{% endtrans %}</a>
-        </li>
+
         <li class="mx-6">
           <a href="/about">{% trans %}About{% endtrans %}</a>
         </li>
       </ul>
     </nav>
-    <main class="grid grid-cols-12 my-6 gap-5">
-      <section class="col-start-1 col-span-8 py-4 px-4">
+    <main class="grid lg:grid-cols-12 grid-cols-6 my-6 gap-5">
+      <section class="col-start-1 lg:col-span-8 col-span-full py-4 px-4">
         {% block body %}
 
           {% block content %}
@@ -46,7 +47,7 @@
         {% endblock %}
       </section>
 
-      <aside class=" col-start-9 col-span-4">
+      <aside class=" lg:col-start-9 lg:col-span-4 col-span-full ">
 
         {% include 'sidebar.html.twig' %}
 
