--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-  <h1>Connexion sur le site</h1>
+  <h1>{% trans %}Login here{% endtrans %}</h1>
 
   <form action="{{ path('security_login') }}" method="post">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Adresse email..." required="required" name="_username">
-      <input type="password" class="form-control" placeholder="Mot de passe" required="required" name="_password">
+      <div>
+        <label for="_username">{% trans %}Email adress{% endtrans %}</label>
+        <input type="text" class="form-control" placeholder="E-mail" required="required" name="_username">
+      </div>
+      <div>
+        <label for="_password">{% trans %}Password{% endtrans %}</label>
+        <input type="password" class="form-control" placeholder="password" required="required" name="_password">
+      </div>
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn--priamry">Connexion</button>
+      <button type="submit" class="btn btn--priamry">{% trans %}Login{% endtrans %}</button>
     </div>
   </form>
 {% endblock %}
